ward map posting feature

--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 DISCORD_WEBHOOK_URL=change_me
 
-POST_TO_DISCORD=true
 POST_TO_CONSOLE=true
+POST_TO_DISCORD=true
 SKIP_MATCH_ALREADY_POSTED_CHECK=false
+
+STRATZ_API_KEY=change_me
