--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-dota",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "canvas": "^3.1.0",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "opendota.js": "^2.0.4"
